--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -375,17 +375,17 @@ spawning output is high.
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/ts7_Spawning_output_with_95_asymptotic_intervals_intervals.png}
-\caption{Time-series of spawning output trajectory (circles and line:
-median; light broken lines: 95\% credibility intervals) for the base
-assessment model. \label{fig:Spawnbio_all}}
+\caption{Estimated time-series of spawning output trajectory (circles
+and line: median; light broken lines: 95\% credibility intervals) for
+the base assessment model. \label{fig:Spawnbio_all}}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/ts9_Spawning_depletion_with_95_asymptotic_intervals_intervals.png}
-\caption{Estimated spawning output depletion with approximate 95\%
-asymptotic confidnce intervals (dashed lines) for the base assessment
-model. \label{fig:RelDeplete_all}}
+\caption{Estimated time-series of relative spawning output (depletion)
+(circles and line: median; light broken lines: 95\% credibility
+intervals) for the base assessment model. \label{fig:RelDeplete_all}}
 \end{figure}
 
 \begin{table}[ht]
@@ -4353,8 +4353,8 @@ ocean perch. \label{fig:recdevs}}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/POP_index_fits.png}
-\caption{Estimated fits to the CPUE and survey indices for Pacific ocean
-perch. \label{fig:index_fits}}
+\caption{Estimated fits to the survey indices for Pacific ocean perch.
+\label{fig:index_fits}}
 \end{figure}
 
 \FloatBarrier 
@@ -4673,8 +4673,9 @@ Fish. Aquat. Sci. 68: 1124\_1138. \label{fig:weighting_nwfsccombo}}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/ts7_Spawning_output_with_95_asymptotic_intervals_intervals.png}
-\caption{Estimated time-series of spawning output for Pacific ocean
-perch. \label{fig:ssb}}
+\caption{Estimated time-series of spawning output trajectory (circles
+and line: median; light broken lines: 95\% credibility intervals) for
+Pacific ocean perch. \label{fig:ssb}}
 \end{figure}
 
 \FloatBarrier
@@ -4691,8 +4692,9 @@ perch. \label{fig:ssb}}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/ts9_Spawning_depletion_with_95_asymptotic_intervals_intervals.png}
-\caption{Estimated time-series of relative biomass for Pacific ocean
-perch. \label{fig:depl}}
+\caption{Estimated time-series of relative spawning output (depletion)
+(circles and line: median; light broken lines: 95\% credibility
+intervals) for Pacific ocean perch. \label{fig:depl}}
 \end{figure}
 
 \FloatBarrier
@@ -4718,8 +4720,8 @@ Pacific ocean perch. \label{fig:sens1_ssb}}
 \begin{figure}
 \centering
 \includegraphics{Figures/depl_sens1.png}
-\caption{Time-series of relative biomass for model sensitivities for
-Pacific ocean perch. \label{fig:sens1_depl}}
+\caption{Time-series of relative spawning output (depletion) for model
+sensitivities for Pacific ocean perch. \label{fig:sens1_depl}}
 \end{figure}
 
 \FloatBarrier
@@ -4736,8 +4738,8 @@ Pacific ocean perch. \label{fig:sens2_ssb}}
 \begin{figure}
 \centering
 \includegraphics{Figures/depl_sens2.png}
-\caption{Time-series of relative biomass for model sensitivities for
-Pacific ocean perch. \label{fig:sens2_depl}}
+\caption{Time-series of relative spawning outptut (depletion) for model
+sensitivities for Pacific ocean perch. \label{fig:sens2_depl}}
 \end{figure}
 
 \FloatBarrier
@@ -4772,8 +4774,8 @@ Pacific ocean perch. \label{fig:sens2_depl}}
 \begin{figure}
 \centering
 \includegraphics{Figures/h_trajectories.png}
-\caption{Trajectories of relative biomass across values of steepness.
-\label{fig:h_trajectory}}
+\caption{Trajectories of relative spawning output (depletion) across
+values of steepness. \label{fig:h_trajectory}}
 \end{figure}
 
 \FloatBarrier
@@ -4790,8 +4792,8 @@ Pacific ocean perch. \label{fig:sens2_depl}}
 \begin{figure}
 \centering
 \includegraphics{Figures/m_trajectories.png}
-\caption{Trajectories of relative biomass across values of natural
-mortality. \label{fig:m_trajectory}}
+\caption{Trajectories of relative spawning output (depletion) across
+values of natural mortality. \label{fig:m_trajectory}}
 \end{figure}
 
 \FloatBarrier
@@ -5113,9 +5115,10 @@ Pacific ocean perch. \label{fig:Excluded_Data_ssb}}
 \begin{figure}
 \centering
 \includegraphics{Figures/ExcludedData_depl.png}
-\caption{Plot comparison of depletion when either the fishery CPUE or
-the Triennial shelf survey data are included in the base model for
-Pacific ocean perch. \label{fig:Excluded_Data_depl}}
+\caption{Plot comparison of relative spawning output (depletion) when
+either the fishery CPUE or the Triennial shelf survey data are included
+in the base model for Pacific ocean perch.
+\label{fig:Excluded_Data_depl}}
 \end{figure}
 
 \FloatBarrier
@@ -5138,22 +5141,22 @@ steepness prior, the approach endorsed by the SSC when there is not
 information regarding steepness for a specific stock. However, using the
 steepness prior of 0.72 resulted in Pacific ocean perch being estimated
 near unfished conditions, a result that was in strong contrast to the
-previous assessment which estimated the stock size at approximately 20\%
-of unfished in 2011. Due to concerns of plausibility the STAT team
+previous assessment which estimated the stock size at 19.1\% of unfished
+stock size in 2011. Due to concerns of plausibility, the STAT team
 presented an initial model to the STAR panel for review using an
 intermediate steepness value of 0.50. This value was selected because
 the resulting spawning output was encapsulated within the uncertainty
 from when steepness was assumed to be 0.40, the previous assessment
-value, and 0.72, the current steepness value. Over the course of the
-week of the STAR panel after many discussions both the STAR panel and
-the STAT team agreed that in the absence of information regarding
-steepness the base model should use the mean of the prior. However, upon
-review by the SSC, it was concluded that the results of the assessment
-model were implausible when the steepness prior of 0.72 was used. In
-particular, the value of catchability for Pacific ocean perch from the
-NWFSC shelf-slope survey was 0.05, far below that for other rockfish
-species observed off the US west coast. The SSC requested additional
-model exploration be done and reviewed at the SSC Groundfish
+value, and 0.72, the current mean of the steepness prior. Over the
+course of the week of the STAR panel after many discussions both the
+STAR panel and the STAT team agreed that in the absence of information
+regarding steepness the base model should use the mean of the prior.
+However, upon review by the SSC, it was concluded that the results of
+the assessment model were implausible when the steepness prior of 0.72
+was used. In particular, the value of catchability for Pacific ocean
+perch from the NWFSC shelf-slope survey was 0.05, far below that for
+other rockfish species observed off the US west coast. The SSC requested
+additional model exploration be done and reviewed at the SSC Groundfish
 Subcommittee (GFSC) September 28, 2017 meeting regarding steepness and
 re-examining the information provided by the Triennial shelf survey.
 
@@ -5170,18 +5173,18 @@ included the Triennial shelf survey indicated that the index of
 abundance supported low steepness values (there was no information from
 the length or age composition data). The perceived information regarding
 steepness from this index of abundance is due to a change in the
-abundance index between the first two data points of the Triennial shelf
-survey, 1980 and 1983, which are higher than the subsequent years that
-drop to lower abundance levels from 1986 to 2004 (final year of the
-survey). A profile over steepness values when the Triennial shelf survey
-was used as a single time-series resulted in a profile that had a local
-minimum at 0.75 with global minimum occurring at a steepness value of
-0.27 (Figure \ref{fig:Tri_Profile}). The estimated stock status when
-assuming a steepness value of 0.27, a value that is far lower than any
-other estimated steepness value for a US west coast groundfish stock,
-was less that 10\% of the unfished spawning output in 2017. The STAT
-team and the SSC GFSC agreed that this was not a plausible based upon
-other estimated steepness values from US west coast groundfish.
+abundance index between the first two data points of the survey, 1980
+and 1983, which are higher than the subsequent years that drop to lower
+abundance levels from 1986 to 2004 (final year of the survey). A profile
+over steepness values when the Triennial shelf survey was used as a
+single time-series resulted in a profile that had a local minimum at
+0.75 with global minimum occurring at a steepness value of 0.27 (Figure
+\ref{fig:Tri_Profile}). The estimated stock status when assuming a
+steepness value of 0.27, a value that is far lower than any other
+estimated steepness value for a US west coast groundfish stock, was less
+that 10\% of the unfished spawning output in 2017. The STAT team and the
+SSC GFSC agreed that this was not a plausible based upon other estimated
+steepness values from US west coast groundfish.
 
 The models explored regarding steepness either using the mean of the
 prior or the value supported by the Triennial shelf survey index led to
@@ -5189,7 +5192,7 @@ quite different estimates of depletion for Pacific ocean perch in 2017.
 Given the insufficient information to estimate steepness within the
 model an alternative approach for determining steepness was proposed by
 Dr.~Owen Hamel during the SSC GFSC webinar held on September 28, 2017.
-The subcommittee states that:
+The subcommittee notes state:
 
 \emph{The GFSC therefore concluded that the available data are
 insufficient to estimate steepness. It is usual in this situation to
