--- a/PacificOceanPerch2017_Assessment.Rmd
+++ b/PacificOceanPerch2017_Assessment.Rmd
@@ -21,7 +21,7 @@ documentclass: article
 fontsize: 12pt
 geometry: margin=1in
 csl: CJFAS.csl
-bibliography: BibFile.bib
+bibliography: BibFile_new.bib
 link-citations: yes
 ---
 <!-- To remove the figure and table labels comment out the \usepackage[inline]{showlabels} within the header.tex file -->
