--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -40,11 +40,11 @@ This a new full assessment for `r spp`, which was last assessed in 2011.  In thi
 
 All of the data sources included in the base model for `r spp` have been re-evaluated for `r LastYR`. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
 
-The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the at-sea hake fishery.  The fleet grouping was based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the at-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
+The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the at-sea hake fishery.  The fleet grouping was based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the at-sea hake fishery accounts for both discarded and landed fish and hence, no additional discard mortality was estimated for each of these fleets.  
 
 The assessment uses landings data and discard-fraction estimates; survey indices of abundance; length- or age-composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality (`r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` yr^-1^) and steepness (`r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`) were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
 
-Although this assessment using many types of data since the 1980s, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
+Although this assessment uses many types of data since the 1980s, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
 A number of sources of uncertainty are explicitly included in this assessment. This assessment includes gender differences in growth, a non-linear relationship between individual spawner biomass and effective spawning output, and an updated relationship between length and maturity, based upon non-published information (Melissa Head, personal communication, NOAA, NWFSC). As is always the case, overall uncertainty is greater than that predicted by a single model specification. Among other sources of uncertainty that are not included in the current model are the degree of connectivity between the stocks of `r spp` off of Vancouver Island, British Columbia and those in US waters, and the effect of climatic variables on recruitment, growth and survival.
 
@@ -122,7 +122,7 @@ The spawning output of `r spp` reached a low in `r low.ssb`.  Landings for `r sp
 ![Estimated relative spawning potential ratio (1-SPR)/(1-SPR50%) for the base model. One minus SPR is plotted so that higher exploitation rates occur on the upper portion of the y-axis. The management target is plotted as a red horizontal line and values above this reflect harvests in excess of the overfishing proxy based on the SPR50% harvest rate. The last year in the time-series is `r Dat_end_mod1`. \label{fig:SPR_all}](`r SPR.file`)
 
 
-![Phase plot of estimated (1-SPR)/(1-SPR50%) vs. depletion (B/Btarget) for the base case model.\label{fig:Phase_all}](`r Phase.file`)
+![Phase plot of estimated (1-SPR)/(1-SPR50%) vs. depletion (B/Btarget) for the base case model. The red circle indicates 2016 estimated status and exploitation for `r spp`. \label{fig:Phase_all}](`r Phase.file`)
 
 \FloatBarrier
 
@@ -133,7 +133,7 @@ Rockfish are an important component of the California Current ecosystem along th
 
 Recruitment is one mechanism by which the ecosystem may directly impact the population dynamics of `r spp`. The 1999 cohort for many species of rockfish was large -- sometimes significantly so. Long-term averages suggest that environmental conditions may influence the spawning success and survival of larvae and juvenile rockfish. `r spp` showed above average recruitment deviations in 1999 and 2000. The specific pathways through which environmental conditions exert influence on `r spp` dynamics are unclear; however, changes in water temperature and currents, distribution of prey and predators, and the amount and timing of upwelling are all possible linkages. Changes in the environment may also result in changes in length-at-maturity, fecundity, growth, and survival which can affect the status of the stock and its susceptibility to fishing. Unfortunately, there are few data available for `r spp` that provide insights into these effects.
 
-Fishing has effects on both the age-structure of a population, as well as the habitat with which the target species is associated. Fishing often targets larger, older fish and years of fishing mortality results in a truncated age-structure when compared to unfished conditions. Rockfish are often associated with habitats containing living structure such as sponges and corals, and fishing may alter that habitat to a less desirable state. This assessment provides a look at the effects of fishing on age structure, and recent studies on essential fish habitat are beginning to characterize important locations for rockfish throughout their life history; however, there is little current information available to evaluate the specific effects of fishing on the ecosystem issues specific to `r spp`.
+Fishing has effects on both the age-structure of a population, as well as the habitat with which the target species is associated. Fishing often targets larger, older fish and years of fishing mortality results in a truncated age-structure when compared to unfished conditions. Rockfish are often associated with habitats containing living structure such as sponges and corals, and fishing may alter that habitat to a less productive state. This assessment provides a look at the effects of fishing on age structure, and recent studies on essential fish habitat are beginning to characterize important locations for rockfish throughout their life history; however, there is little current information available to evaluate the specific effects of fishing on the ecosystem issues specific to `r spp`.
 
 
 ##Reference Points{-}
@@ -172,11 +172,11 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 \begin{enumerate}
 
-\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which was deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning output across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
+\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models that used the mean to the 2017 steepness prior (0.72) resulted in stock size estimates near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey that the Scientific and Statistical Committee (SSC) deemed implausible.  A steepness value for the final model was determined by a form of model averaging. Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
 
-\item `r spp` off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the observation variability. While this comment is not intended to reflect badly on the STAT's capabilities, it is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
+\item `r spp` off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the lack of fit to the observations. It is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
-\item The indices of abundance used in the final base model provide almost no information on population scale, as demonstrated in the ln($R0$) profiles examined during the review. The Triennial survey was the only index that provided signal with respect to population scale. However, this survey was removed in the final base model due to concerns about the quality of the survey and conflicts with other data. There are large amounts of composition data in the model, with both age- and length-compositions being included for some fleets. The compositional data and catch are providing the majority of the information on the estimated and derived quantities.
+\item The indices of abundance used in the final base model provide almost no information on population scale, as demonstrated in the ln($R0$) profiles examined during the review. The Triennial survey was the only index that provided signal with respect to population scale. However, this survey was removed in the final base model due to concerns about the quality of the survey and conflicts with other data.
 
 \item Use of conditional-age-at-length composition data provides information on parameters beyond those of the length-at-age relationship. The conditional-age-at-length data are robust to length-based processes (Piner et al. 2016), however they are also influenced by age-based processes (Lee et al. 2017). No age-based processes were used in the assessment model as a link to the data, meaning that the conditional-age-at-length data were assumed to be unbiased with respect to the population. The conditional-age-at-length data were shown to be very influential on the estimated dynamics beyond growth estimates. More theoretical work in this area is needed to understand how to best the use this type of information and what potential systems or observation model processes could invalidate the assumption of randomness at length.
 
@@ -184,9 +184,9 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 ##Decision Table{-}    
 
-Model uncertainty has been described by the estimated uncertainty within the base model and by the sensitivities to different model structure. The results from the final base model were sensitivey to both the assumed steepness or natural mortality values. The STAT team and the STAR panel agreed to select natural mortality ($M$) as the main axis for uncertainty when projecting the population under alternative harvest strategies. The 12.5% and 87.5% quantiles based on spawning output uncertainty were used to determine the low and high values for $M$ of 0.04725 and 0.0595 yr^-1^.
+Model uncertainty has been described by the estimated uncertainty within the base model and by the sensitivities to different model structure. The results from the final base model were sensitive to both the assumed steepness or natural mortality values. The STAT team and the STAR panel agreed to select natural mortality ($M$) as the main axis for uncertainty when projecting the population under alternative harvest strategies. The 12.5% and 87.5% quantiles based on spawning output uncertainty were used to determine the low and high values for $M$ of 0.04725 and 0.0595 yr^-1^.
 
-Due to the sensitivity associated with the assessment given the assumed steepness value the assessment is classified as a Category 2 stock assessment. Therefore, the sigma for P* to determine the catch reduction to account for scientific uncertainty is 0.72, since the estimated sigma in the assessment is less than this for current spawning biomass (`r round(mod1$Pstar_sigma,2)`).
+Due to the sensitivity associated with the assessment given the assumed steepness value the assessment is classified as a Category 2 stock assessment, with a default sigma of 0.72.  This default sigma is used to determine the catch reduction to account for scientific uncertainty because the estimated sigma for current spawning biomass in the assessment is (`r round(mod1$Pstar_sigma,2)`).
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY OFL AND DECISION TABLES************ -->
 
@@ -216,13 +216,13 @@ Due to the sensitivity associated with the assessment given the assumed steepnes
 
 ##Research and Data Needs{-} 
 
-There are many areas of research that could be improved to benefit the understanding and assessment of `r spp`. Below, are issues that are considered of importance.
+There are many areas of research that could be undertaked to benefit the understanding and assessment of `r spp`. Below, are issues that are considered of importance.
 
 \begin{enumerate}
 
 \item \textbf{Natural mortality}: Uncertainty in natural mortality translates into uncertain estimates of status and sustainable fishing levels for `r spp`. The collection of additional age data, re-reading of older age samples, reading old age samples that are unread, and improved understanding of the life history of `r spp` may reduce that uncertainty.
 
-\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understating regarding the steepness parameter for US west coast `r spp` will reduce our uncertainty regarding current stock status.
+\item \textbf{Steepness}: The amount of stock resilience, steepness, dictates the rate at which a stock can rebuild from low stock sizes.  Improved understanding regarding the steepness parameter for US west coast `r spp` will reduce our uncertainty regarding current stock status.
 
 \item \textbf{Basin-wide understanding of stock structure, biology, connectivity, and distribution:} This is a stock assessment for `r spp` off of the west coast of the US and does not consider data from British Columbia or Alaska. Further investigating and comparing the data and predictions from British Columbia and Alaska to determine if there are similarities with the US west coast observations would help to define the connectivity between `r spp` north and south of the US-Canada border.
 
