--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -10,7 +10,7 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 
 Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`.  A coast-wide survey was conducted in 1977 [@gunderson_distribution_1980] and repeated every three years through 2004 (referred to as the 'Triennial shelf survey'). The NMFS coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fish and Wildlife (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` survey). Two slope surveys have been conducted off the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC slope survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead, and sablefish) survey and was expanded to other groundfish in 1999 (referred to as the 'NWFSC slope survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope survey').
 
-Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by age 14, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Otoliths from fishery-independent and -dependent sources that were only surface age reads were excluded from this assessment due to the bias associated with these age reads. 
+Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are highly biased by age 14, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years. Otoliths from fishery-independent and -dependent sources that were only surface age reads were excluded from this assessment due to the bias associated with these age reads.  The previous assessment also excluded the surface read otoliths. 
 
 ###Northwest Fisheries Science Center (NWFSC) Shelf-Slope Survey
 
@@ -22,35 +22,39 @@ The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only l
 
 Length compositions were expanded based upon the stratification and the age data was used as conditional age-at-length data.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}), where ages were collected for `r spp` in nearly every tow length data were collected (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitments; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
-The input sample sizes for length and marginal age-composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014], which determined that the approximate realized sample size for shelf/slope rockfish species was $2.43*N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year.
+The input sample sizes for length and marginal age-composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014], which determined that the approximate realized sample size for shelf/slope rockfish species was $2.43*N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year (not expanded for fish that were captured but not measured).
+
+Fish with ages also have an associated length and each type of data have been used in the model. Age data from the NWFSC shelf-slope survey were used as conditional-age-at-length data within the model, which avoids double of the length and age data by explicitly stating the length associatted with each aged fish.  Hence, the length and conditional-age-at-length data from the NWFSC shelf-slope survey were given full weight in likelihood calculations when model fitting. 
 
 ###Northwest Fisheries Science Center (NWFSC) Slope Survey  
 
-The NWFSC slope survey covered waters throughout the summer from 183 m to 1,280 m north of $34^\circ 30^\prime$ S, which is near Point Conception, from 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM and the VAST delta-GLMM models.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  Based on the diagnostics of the bayesian delta-GLMM, which does not account for spatial effects, a gamma distribution allowing for additional probability of extreme catch events with year-vessel random effects was selected as the final model.  The Q-Q plot does show a minimal departure from the assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined to be acceptable based on the alternative model distributions.  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.  Sensitivities (not shown) were done evaluating the excluding of this index within the base model or using the VAST estimated index and neither approach was found to be influential on the model estimates.  
+The NWFSC slope survey covered waters throughout the summer from 183 m to 1,280 m north of $34^\circ 30^\prime$ S, which is near Point Conception, from 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using a bayesian delta-GLMM model. The VAST delta-GLMM model was also explored but due to poor diagnostics this modeling approach was not used to create the final index.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  Based on the diagnostics of the bayesian delta-GLMM, which does not account for spatial effects, a gamma distribution allowing for additional probability of extreme catch events with year-vessel random effects was selected as the final model.  The Q-Q plot does show a minimal departure from the assumed distribution (Figure \ref{fig:nw_slope_qq}), but was determined to be acceptable based on the alternative model distributions.  The trend of abundance across the four surveys years was generally flat with high estimated annual variance.  Sensitivities (not shown) were done evaluating the excluding of this index within the base model or using the VAST estimated index and neither approach was found to be influential on the model estimates.  
 
 Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratification (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}).  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
-The input sample sizes for length and marginal age-composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age-composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}. 
+
+Fish with ages also have an associated length and each type of data have been used in the model. To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.
 
 
 ###Alaska Fisheries Science Center (AFSC) Slope Survey 
 
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used.
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys (1997, 1999, 2000, and 2001) plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used across all year to create and index of abundance.  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
 
-Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Length}). 
+Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), except for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Length}). 
 
-The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described above in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}. 
 
 
 ###Pacific Ocean Perch Survey
 
 A survey designed to sample `r spp` was conducted in 1979 and again in 1985 (for a detailed description see Ianelli et al. [-@ianelli_status_1992]).  An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:pop_qq}).  The index shows a clear decline in abundance between the two survey years. 
 
-Length and age compositions were expanded based on the survey stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only available in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
+Length and age compositions were expanded based on the survey stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and break-and-burn ages were available for 1985 (Table \ref{tab:POP_Ages}). Only surface reads, considered to be biased, were available for the 1979 data. The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
-The input sample sizes for length and marginal age-composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}.
+The input sample sizes for length and marginal age-composition data were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014] described above in Section \ref{northwest-fisheries-science-center-nwfsc-shelf-slope-survey}. To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.
 
 ###Fishery Independent Data Not Included in the Base Model
 
@@ -61,12 +65,12 @@ The Triennial shelf survey was first conducted by the AFSC in 1977 and spanned t
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 m. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 m and surveyed south to $34.5^\circ$ N. In the final year of the Triennial series, 2004, the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
-The Triennial shelf survey was not used in the final base model for a number of reasons.  First, there were concerns regarding the varying sampling and targeting of specific species by year across the time-series.  Secondly, the Triennial shelf survey targeted the shelf of the West Coast and would not be expected to sample well slope species such as `r spp`.  There were limited observations of `r spp` relative to other surveys (e.g. NWFSC shelf-slope survey) and the length and age distributions varied in such a manner that would indicate either poor sampling of `r spp` or inconsistent sampling of the population.  
+Although the Triennial shelf survey was used in the 2011 assessment, it was not used in the final base model for the current assessment for a number of reasons.  First, there were concerns regarding the varying sampling and targeting of specific species by year across the time-series.  Secondly, the Triennial shelf survey targeted the shelf of the West Coast and would not be expected to sample well slope species such as `r spp`.  There were limited observations of `r spp` relative to other surveys (e.g. NWFSC shelf-slope survey) and the length and age distributions varied in such a manner that would indicate either poor sampling of `r spp` or inconsistent sampling of the population.  
 
 Information regarding the Triennial shelf survey index of abundance and the number of samples available and plots of the composition data are available in Appendix C, section \ref{appendix-c.-description-of-cpue-and-triennial-data}.
 
 #### Washington Research Lengths
-Research length and ages were provided by WDFW.  However, the information regarding the nature of the research cruise and collection methods have been lost to time.  The data set includes lengths and ages that were collected between 1967-1972 and in 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages for `r spp`.  Due to the lack of information regarding the collection of these data, they were not selected to be apart of the base model but a sensitivity was conducted which evaluated the impact of these data.
+Research length and ages were provided by WDFW.  However, the information regarding the nature of the research cruise and collection methods have been lost to time.  The data set includes lengths and ages that were collected between 1967-1972 and in 1979.  The distribution of lengths across years collected were consistent with primarily only larger `r spp`, 35-40 cm, being selected.  All age data were based upon surface reads which unfortunately are highly biased at relatively young ages for `r spp`.  Due to the lack of information regarding the collection of these data, they were not selected to be a part of the base model but a sensitivity was conducted which evaluated the impact of these data.
 
 <!-- ********************************************************************** -->
 <!-- ************FISHERY-DEPENDENT DATA************************************ -->
@@ -77,7 +81,7 @@ Research length and ages were provided by WDFW.  However, the information regard
 
 **Washington**
 
-Historical commercial fishery landings of `r spp` in Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a historical catch reconstruction provided by Washington state and, hence, the historical catches for Washington differ from those used in the 2011 assessment.  WDFW also provided catches for 1981-2016 period to include re-distribution of the "URCK" landings in the PacFIN database.  These data are currently not available from PacFIN. 
+Historical commercial fishery landings of `r spp` in Washington for the years 1908-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a historical catch reconstruction provided by Washington state and, hence, the historical catches for Washington differ from those used in the 2011 assessment.  WDFW also provided catches for the 1981-2016 period to include re-distribution of the "URCK" landings in the PacFIN database.  These data are currently not available from PacFIN. 
 
 **Oregon**
 
@@ -85,11 +89,11 @@ Historical commercial fishery landings of `r spp` in Oregon for the years 1892-1
 
 **California**
 
-Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey data system, also known as CALCOM Database (128.114.3.187) for the years 1916-1980. The catches received included revisions in the catch history from 1948-1960 based on fish that were landed in northern California that were not included in the original reconstruction.  A description of the historical reconstruction methods can be found in Ralston et al. [-@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
+Historical commercial fishery landings of `r spp` were obtained directly from John Field at the SWFSC due to database issues for the historical period for the  California Cooperative Groundfish Survey data system, also known as CALCOM Database (128.114.3.187) for the years 1916-1980. The catches received included revisions in the catch history from 1948-1960 based on fish that were caught north of the California-Oregon border and landed in northern California which were not included in the original reconstruction.  A description of the historical reconstruction methods can be found in Ralston et al. [-@ralston_documentation_2010]. Recent landings  (1981-2016) were obtained from PacFIN (retrieval dated May 2, 2017, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).
 
 **At-Sea Hake Fishery**
 
-Catches of `r spp` are monitored aboard the vessel by observers in the at-sea hake Observer program (ASHOP) and were available for the years of 1975-2016. Observers use a spatial sample design, based on weight, to randomly choose a portion of the haul to sample for species composition. For the last decade, this is typically 30-50% of the total weight. The total weight of the sample is determined by all catch passing over a flow scale. All species other than hake are removed and weighed by species on a motion compensated flatbed scale. Observers record the weights of all non-hake species. Non-hake species total weights are expanded in the database by using the proportion of the haul sampled to the total weight of the haul. The catches of non-hake species in unsampled hauls is determined using bycatch rates determined from sampled hauls. Since 2001, more than 97% of the hauls have been observed and sampled.
+Catches of `r spp` are monitored aboard the vessel by observers in the at-sea hake Observer program (ASHOP) and were available for the years of 1975-2016. Observers use a spatial sample design, based on weight, to randomly choose a portion of the haul to sample for species composition. For the last decade, this is typically 30-50% of the total weight. The total weight of the sample is determined by all catch passing over a flow scale. All species other than hake are removed and weighed by species on a motion compensated flatbed scale. Observers record the weights of all non-hake species. Non-hake species total weights are expanded in the database by using the proportion of the haul sampled to the total weight of the haul. The catches of non-hake species in unsampled hauls is determined using bycatch rates determined from sampled hauls. Since 2001, more than 97% of the hauls have been observed and sampled. 
 
 **Foreign Catches**
 
@@ -113,10 +117,12 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 \end{centering}
 
-The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear patterns showing a large cohort moving through the population (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
+The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear patterns showing two large cohorts moving through the population near the end of the time-series (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
+
+To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.
 
 ###Fishery Data Not Included in the Base Model
-Several dataset available from the fishery were explored but not used in the final assessment.
+Several datasets available from the fishery were explored but not used in the final assessment.
 
 ####Historical Commercial Catch-Per-Unit Effort
 
@@ -132,8 +138,7 @@ Oregon special project data were provided by ODFW.  These data represent samples
 
 ###Natural Mortality
 
-Historical `r spp` ages determined using scales and surface reading methods of otoliths resulted in estimates of natural mortality ($M$) between 0.10 and 0.20 yr^-1^ with a longevity
-less than 30 years [@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059 yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life-history correlates (including Hoenig's method, Gunderson [-@gunderson_trade-off_1997] gonadosomatic index, and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
+Historical `r spp` ages determined using scales and surface reading methods of otoliths resulted in estimates of natural mortality ($M$) between 0.10 and 0.20 yr^-1^ with a longevity less than 30 years [@gunderson_population_1977].  Based on the break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059 yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life-history correlates (including Hoenig's method, Gunderson [-@gunderson_trade-off_1997] gonadosomatic index, and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  
 
 Hamel [-@hamel_method_2015] developed a method for combining meta-analytic approaches relating the $M$ rate to other life-history parameters such as longevity, size, growth rate, and reproductive effort to provide a prior on $M$. In that same issue of *ICES Journal of Marine Science*, Then et al. [-@then_evaluating_2015] provided an updated data set of estimates of $M$ and related life history parameters across a large number of fish species from which to develop an $M$ estimator for fish species in general. They concluded by recommending $M$ estimates be based on maximum age alone, based on an updated Hoenig non-linear least squares estimator $M=4.899A^{-0.916}_{max}$. The approach of basing $M$ priors on maximum age alone was one that was already being used for West Coast rockfish assessments. However, in fitting the alternative model forms relating $M$ to $A_{\text{max}}$, Then et al. [-@then_evaluating_2015] did not consistently apply their transformation. In particular, in real space, one would expect substantial heteroscedasticity in both the observation and process error associated with the observed relationship of $M$ to $A_{\text{max}}$. Therefore, it would be reasonable to fit all models under a log transformation. This was not done. Re-evaluating the data used in Then et al. [-@then_evaluating_2015] by fitting the one-parameter $A_{\text{max}}$ model under a log-log transformation (such that the slope is forced to be -1 in the transformed space [@hamel_method_2015]), the point estimate for $M$ is:
 
@@ -148,7 +153,7 @@ The above is also the median of the prior. The prior is defined as a lognormal d
 
 ###Sex Ratio, Maturation, and Fecundity
 
-Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment assumed the sex ratio at birth was 1:1. This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment that assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare}.
+Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by length until larger sizes which are dominated by females who reach a larger maximum size relative to males (Figure \ref{fig:sexratio}), with the sex ratio being approximately equal across ages (Figure \ref{fig:sexratio_Age}), and hence this assessment assumed the sex ratio at birth was 1:1. This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment that assumed maturity-at-age based on the work of Hannah and Parker [-@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to 1.0 for larger fish (Figure \ref{fig:mat}).  Comparison between the maturity-at-age used in the previous assessment and the updated functional maturity-at-length is shown in Figure \ref{fig:mat_compare} showing that the new maturity curve has fish reaching 50% maturity at older ages relative to the maturity-at-age used in the 2011 assessment.
 
 The fecundity-at-length has also been updated from the previous assessment based on new research.  Dick et al. [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r format(mod1$MGparmAdj$Eggs_scalar_Fem[1], scientific = TRUE)`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs where $L$ is length in cm. Fecundity-at-length is shown in Figure \ref{fig:fecundity}.
 
@@ -175,7 +180,7 @@ These values were used as starting parameter values within the base model prior 
 
 ###Ageing Precision and Bias
 
-Uncertainty surrounding the age-reading error process for `r spp` was incorporated by estimating ageing error by age. Age-composition data used in the model were from break-and-burn otolith reads aged by the Cooperative Ageing Project (CAP) in Newport, Oregon. Break-and-burn double reads of more than 1500 otoliths were provided by the CAP lab.  An ageing-error estimate was made based on these double reads using a computational tool specifically developed for estimating ageing error [@punt_quantifying_2008] and using release 1.0.0 of the R package nwfscAgeingError [@thorson_nwfscageingerror:_2012] for input and output diagnostics, publicly available at: https://github.com/nwfsc-assess/nwfscAgeingError. A non-linear standard error was estimated by age, where there is more variability in the age of older fish (Table \ref{tab:Age_Error} and Figure \ref{fig:Age_Error}). 
+Uncertainty surrounding the age-reading error process for `r spp` was incorporated by estimating ageing error by age. Age-composition data used in the model were from break-and-burn otolith reads aged by the Cooperative Ageing Project (CAP) in Newport, Oregon. Break-and-burn double reads of more than 1500 otoliths were provided by the CAP lab.  An ageing-error estimate was made based on these double reads using a computational tool specifically developed for estimating ageing error [@punt_quantifying_2008] and using release 1.0.0 of the R package nwfscAgeingError [@thorson_nwfscageingerror:_2012] for input and output diagnostics, publicly available at: https://github.com/nwfsc-assess/nwfscAgeingError. A non-linear standard error was estimated by age, where there is more variability in the age of older fish (Table \ref{tab:Age_Error} and Figure \ref{fig:Age_Error}).  The 2011 assessment assumed a linear ageing error vector and is shown in Figure \ref{fig:Age_Error} for comparison with the updated ageing error applied in the current assessment.  
 
 
 <!-- ********************************************************************** -->
@@ -186,7 +191,7 @@ Uncertainty surrounding the age-reading error process for `r spp` was incorporat
 ###Previous Assessments
 The status of `r spp` off British Columbia, Washington, and Oregon have been periodically assessed since the intensive exploitation that occurred in the 1960s.  Concerns regarding `r spp` status off the coast the US west coast were raised in the late 1970s [@gunderson_results_1978; @gunderson_updated_1981] and in 1981 the PFMC adopted a 20-year plan to rebuild the stock. 
 
-The 1992 assessment determined that `r spp` remained at low levels relative to the population size in 1960 [@ianelli_status_1992] and recommended additional harvest restrictions to allow for stock rebuilding.  The 1998 assessment [@ianelli_status_1998] estimated that the stock was 13% of the unfished level, leading the National Marine Fishery Service (NMFS) to declare the stock overfished in 1999.  A formal rebuilding plan was implemented in 2001.  The rebuilding plan reduced the SPR harvest rate used to determine catches to 0.864 (in contrast to the default harvest rate of 0.50).  The last full assessment of `r spp` was conducted in 2011 [@hamel_stock_2011], which concluded that the stock was still well below the target biomass of $40\%SB_{0}$ estimating the relative stock status at 19.1%. 
+The 1992 assessment determined that `r spp` remained at low levels relative to the population size in 1960 [@ianelli_status_1992] and recommended additional harvest restrictions to allow for stock rebuilding.  The 1998 assessment [@ianelli_status_1998] estimated that the stock was 13% of the unfished level, leading the National Marine Fishery Service (NMFS) to declare the stock overfished in 1999.  A formal rebuilding plan was implemented in 2001.  The rebuilding plan reduced the SPR harvest rate used to determine catches to 0.864 (in contrast to the default harvest rate of 0.50).  The last full assessment of `r spp` was conducted in 2011 [@hamel_stock_2011], which concluded that the stock was still well below the target biomass of $40\%SB_{0}$, estimating the relative stock status at 19.1%. 
 
 
 
